tests/react_imports/react_imports.exp
Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   commonjs-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:30:15
   30| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   commonjs-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   commonjs-pascal.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------ commonjs-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   commonjs-pascal.js:7:14
     7| (null: React.Missing); // Error
                     ^^^^^^^

References:
   <BUILTINS>/react.js:447:27
   447|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- commonjs.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   commonjs.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:30:15
   30| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   commonjs.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- commonjs.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   commonjs.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------- commonjs.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   commonjs.js:7:14
   7| (null: React.Missing); // Error
                   ^^^^^^^

References:
   commonjs.js:1:15
   1| const React = require('react');
                    ^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-default-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:30:15
   30| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-default-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-default-pascal.js:6:2
    6| ({}: React.Node); // Error: Not in default export.
        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- es-default-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   es-default-pascal.js:7:14
     7| (null: React.Missing); // Error: Not in default export.
                     ^^^^^^^

References:
   <BUILTINS>/react.js:447:27
   447|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ es-default.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-default.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:30:15
   30| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-default.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es-default.js:5:25

Cannot get `React.Node` because property `Node` is missing in object type [1]. [prop-missing]

   es-default.js:5:25
     5| ('Hello, world!': React.Node); // Error: Not in default export.
                                ^^^^

References:
   <BUILTINS>/react.js:403:26
                                 v
   403|   declare export default {
   404|     +DOM: typeof DOM,
   405|     +version: typeof version,
   406|     +checkPropTypes: typeof checkPropTypes,
   407|     +memo: typeof memo,
   408|     +lazy: typeof lazy,
   409|     +createClass: typeof createClass,
   410|     +createContext: typeof createContext,
   411|     +createElement: typeof createElement,
   412|     +cloneElement: typeof cloneElement,
   413|     +createFactory: typeof createFactory,
   414|     +createRef: typeof createRef,
   415|     +forwardRef: typeof forwardRef,
   416|     +isValidElement: typeof isValidElement,
   417|     +Component: typeof Component,
      :
   427|     +useReducer: typeof useReducer,
   428|     +useRef: typeof useRef,
   429|     +useEffect: typeof useEffect,
   430|     +useLayoutEffect: typeof useLayoutEffect,
   431|     +useCallback: typeof useCallback,
   432|     +useMemo: typeof useMemo,
   433|     +useImperativeHandle: typeof useImperativeHandle,
   434|     +useTransition: typeof useTransition,
   435|     +useDeferredValue: typeof useDeferredValue,
   436|     +startTransition: typeof startTransition,
   437|     +useId: typeof useId,
   438|     +useInsertionEffect: typeof useInsertionEffect,
   439|     +useSyncExternalStore: typeof useSyncExternalStore,
   440|     ...
   441|   };
          ^ [1]


Error ----------------------------------------------------------------------------------------------- es-default.js:6:12

Cannot get `React.Node` because property `Node` is missing in object type [1]. [prop-missing]

   es-default.js:6:12
     6| ({}: React.Node); // Error: Not in default export.
                   ^^^^

References:
   <BUILTINS>/react.js:403:26
                                 v
   403|   declare export default {
   404|     +DOM: typeof DOM,
   405|     +version: typeof version,
   406|     +checkPropTypes: typeof checkPropTypes,
   407|     +memo: typeof memo,
   408|     +lazy: typeof lazy,
   409|     +createClass: typeof createClass,
   410|     +createContext: typeof createContext,
   411|     +createElement: typeof createElement,
   412|     +cloneElement: typeof cloneElement,
   413|     +createFactory: typeof createFactory,
   414|     +createRef: typeof createRef,
   415|     +forwardRef: typeof forwardRef,
   416|     +isValidElement: typeof isValidElement,
   417|     +Component: typeof Component,
      :
   427|     +useReducer: typeof useReducer,
   428|     +useRef: typeof useRef,
   429|     +useEffect: typeof useEffect,
   430|     +useLayoutEffect: typeof useLayoutEffect,
   431|     +useCallback: typeof useCallback,
   432|     +useMemo: typeof useMemo,
   433|     +useImperativeHandle: typeof useImperativeHandle,
   434|     +useTransition: typeof useTransition,
   435|     +useDeferredValue: typeof useDeferredValue,
   436|     +startTransition: typeof startTransition,
   437|     +useId: typeof useId,
   438|     +useInsertionEffect: typeof useInsertionEffect,
   439|     +useSyncExternalStore: typeof useSyncExternalStore,
   440|     ...
   441|   };
          ^ [1]


Error ----------------------------------------------------------------------------------------------- es-default.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in object type [1]. [prop-missing]

   es-default.js:7:14
     7| (null: React.Missing); // Error: Not in default export.
                     ^^^^^^^

References:
   <BUILTINS>/react.js:403:26
                                 v
   403|   declare export default {
   404|     +DOM: typeof DOM,
   405|     +version: typeof version,
   406|     +checkPropTypes: typeof checkPropTypes,
   407|     +memo: typeof memo,
   408|     +lazy: typeof lazy,
   409|     +createClass: typeof createClass,
   410|     +createContext: typeof createContext,
   411|     +createElement: typeof createElement,
   412|     +cloneElement: typeof cloneElement,
   413|     +createFactory: typeof createFactory,
   414|     +createRef: typeof createRef,
   415|     +forwardRef: typeof forwardRef,
   416|     +isValidElement: typeof isValidElement,
   417|     +Component: typeof Component,
      :
   427|     +useReducer: typeof useReducer,
   428|     +useRef: typeof useRef,
   429|     +useEffect: typeof useEffect,
   430|     +useLayoutEffect: typeof useLayoutEffect,
   431|     +useCallback: typeof useCallback,
   432|     +useMemo: typeof useMemo,
   433|     +useImperativeHandle: typeof useImperativeHandle,
   434|     +useTransition: typeof useTransition,
   435|     +useDeferredValue: typeof useDeferredValue,
   436|     +startTransition: typeof startTransition,
   437|     +useId: typeof useId,
   438|     +useInsertionEffect: typeof useInsertionEffect,
   439|     +useSyncExternalStore: typeof useSyncExternalStore,
   440|     ...
   441|   };
          ^ [1]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-namespace-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:30:15
   30| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-namespace-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-namespace-pascal.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error -------------------------------------------------------------------------------------- es-namespace-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `React` [1]. [prop-missing]

   es-namespace-pascal.js:7:14
     7| (null: React.Missing); // Error
                     ^^^^^^^

References:
   <BUILTINS>/react.js:446:16
   446| declare module React {
                       ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-namespace.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:30:15
   30| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-namespace.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-namespace.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error --------------------------------------------------------------------------------------------- es-namespace.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   es-namespace.js:7:14
     7| (null: React.Missing); // Error
                     ^^^^^^^

References:
   <BUILTINS>/react.js:206:16
   206| declare module react {
                       ^^^^^ [1]



Found 19 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
